WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
250315
REGRESSION(
258448@main
): [GStreamer] Broke imported/w3c/web-platform-tests/media-capabilities webrtc tests
https://bugs.webkit.org/show_bug.cgi?id=250315
Summary
REGRESSION(258448@main): [GStreamer] Broke imported/w3c/web-platform-tests/me...
Philippe Normand
Reported
2023-01-09 04:42:57 PST
VP9 encoding/decoding support no longer properly advertised in RTP capabilities...
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2023-01-11 03:07:40 PST
Pull request:
https://github.com/WebKit/WebKit/pull/8517
EWS
Comment 2
2023-01-12 05:22:42 PST
Committed
258826@main
(12eeaf78a6d4): <
https://commits.webkit.org/258826@main
> Reviewed commits have been landed. Closing PR #8517 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-01-12 05:23:18 PST
<
rdar://problem/104165795
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug