Cherry-pick 258826@main (12eeaf78a6d4). https://bugs.webkit.org/show_bug.cgi?id=250315

REGRESSION(258448@main): [GStreamer] Broke imported/w3c/web-platform-tests/media-capabilities webrtc tests
    https://bugs.webkit.org/show_bug.cgi?id=250315

    Reviewed by Žan Doberšek and Xabier Rodriguez-Calvar.

    Fix WebRTC settings notifications on Page for ports not enabling LibWebRTC. Also rebaseline
    media-capabilities tests on GLib ports after recent changes in the GStreamer registry scanner.

    * LayoutTests/platform/glib/TestExpectations:
    * LayoutTests/platform/glib/imported/w3c/web-platform-tests/media-capabilities/decodingInfo.webrtc-expected.txt:
    * LayoutTests/platform/glib/imported/w3c/web-platform-tests/media-capabilities/encodingInfo.webrtc-expected.txt:
    * Source/WebCore/page/Page.cpp:
    (WebCore::Page::settingsDidChange):
    * Source/WebCore/platform/mediastream/gstreamer/GStreamerWebRTCProvider.cpp:
    (WebCore::GStreamerWebRTCProvider::initializeVideoEncodingCapabilities):
    (WebCore::GStreamerWebRTCProvider::initializeVideoDecodingCapabilities):

    Canonical link: https://commits.webkit.org/258826@main